--- a/handlers/templates/pages/upload.html
+++ b/handlers/templates/pages/upload.html
@@ -266,7 +266,7 @@
 {{ end }}
 
 {{ define "content" }}
-  <h1 class="title">Uploadies</h1>
+  <h1 class="title">Uploads</h1>
 
   <div id="upload-form">
     <div class="file is-boxed">
