--- a/handlers/templates/pages/playlists.html
+++ b/handlers/templates/pages/playlists.html
@@ -25,9 +25,14 @@
           <td>
             <div class="field is-grouped is-justify-content-flex-end">
               <p class="control">
-                <button class="button is-link" aria-label="Edit">
-                  <i class="fas fa-edit"></i>
-                </button>
+                  <a
+                    class="button is-link"
+                    href="/playlists/{{ .ID }}/edit"
+                    role="button"
+                    aria-label="Edit"
+                  >
+                    <i class="fas fa-edit"></i>
+                  </a>
               </p>
               <p class="control">
                   <button
